Version 2.0 - 2018-04-13
* BUG#7591 The field family is not required in a medical act description as some medical acts do not belong to any specific family

Version 1.14 - 2017-11-09
* BUG#6927 Contract's billing information bank account is claim_bank_account's default value if the subscriber has no bank account to date

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Merge benefit_health in claim_health

Version 1.6 - 2015-12-23
* FEA#0000 Add claim bank account on covered element
* FEA#0000 Module creation